force-app/main/default/objects/Opportunity/fields/Mulesoft_ACV__c.field-meta.xml
<CustomField>
    <fullName>Mulesoft_ACV__c</fullName>
    <description>Smoothed annualized amount for all subscriptions on the opportunity. Use “opportunity type” filter to find NAO.</description>
    <inlineHelpText>Smoothed annualized amount for all subscriptions on the opportunity. Use “opportunity type” filter to find NAO.</inlineHelpText>
    <label>MuleSoft ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>