force-app/main/default/objects/Opportunity/fields/Product_Annual_Sum__c.field-meta.xml
<CustomField>
    <fullName>Product_Annual_Sum__c</fullName>
    <description>Calculates the annualized sum of products</description>
    <label>Product Annual Sum</label>
    <summarizedField>OpportunityLineItem.Product_Total_Annual_Rate__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Rollup_Category__c</field>
        <operation>equals</operation>
        <value>Subscription</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>