force-app/main/default/objects/Opportunity/fields/Subscription_Amount__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Amount__c</fullName>
    <description>Roll up of subscription fees in opportunity</description>
    <inlineHelpText>Subscription Fees</inlineHelpText>
    <label>Subscription Amount</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Rollup_Category__c</field>
        <operation>equals</operation>
        <value>Subscription, Subscription Royalty, Credit</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>