force-app/main/default/objects/Opportunity/fields/Weighted_ACV_Amount__c.field-meta.xml
<CustomField>
    <fullName>Weighted_ACV_Amount__c</fullName>
    <description>This is taking the ACV product amounts and multiplying by the probability of the opportunity</description>
    <formula>IF(CloseDate &lt; DATE(2019,2,1),Subscription_Amount__c * Probability, Mulesoft_ACV__c * Probability )</formula>
    <label>Weighted ACV Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>